fix: change body overflow-x to clip to restore sticky navbar function

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,7 +30,7 @@
 body {
   background-color: var(--background);
   color: var(--foreground);
-  overflow-x: hidden;
+  overflow-x: clip;
   font-family: var(--font-inter), sans-serif;
   font-size: 1.0625rem;
 }
